# HesaiLidar_General_SDK

./: CMakeLists.txt
include/pandarGeneral_sdk/: pandarGeneral_sdk.h
src/: pandarGeneral_sdk.cc  tcp_command_client.c  wrapper.cc
src/PandarGeneralRaw/: CMakeLists.txt
src/PandarGeneralRaw/include/: log.h
src/PandarGeneralRaw/include/pandarGeneral/: pandarGeneral.h  pandarGeneral_internal.h  point_types.h
src/PandarGeneralRaw/src/: pandarGeneral_internal.cc
